Add projectLombok and minor changes

--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,17 @@
 buildscript {
 	ext {
 		springBootVersion = '2.0.5.RELEASE'
+		gradleVersion = '1.14'
 	}
 	repositories {
 		mavenCentral()
+		maven {
+			url "https://plugins.gradle.org/m2/"
+		}
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+		classpath("io.franzbecker:gradle-lombok:${gradleVersion}")
 	}
 }
 
@@ -14,6 +19,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'io.franzbecker.gradle-lombok'
 
 group = 'com.example.mcia.backend'
 version = '0.0.1-SNAPSHOT'
@@ -21,6 +27,11 @@ sourceCompatibility = 1.8
 
 repositories {
 	mavenCentral()
+}
+
+lombok {
+	version = '1.18.2'
+	sha256 = ""
 }
 
 
