--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'io.franzbecker.gradle-lombok'
 
-group = 'com.example.mcia.backend'
+group = 'com.mcia.backend'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
@@ -40,7 +40,8 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 	implementation('org.springframework.boot:spring-boot-starter-web')
 	
-	runtimeOnly('mysql:mysql-connector-java')
+//	runtimeOnly('mysql:mysql-connector-java')
+	runtimeOnly('com.h2database:h2')
 	
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
