Add security config (using LDAP)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ server.port=8000
 # Logging
 logging.level.root=INFO
 logging.level.com.mcia = DEBUG
+
+#ldap Debugging
+spring.ldap.embedded.ldif=classpath:test-server.ldif
+spring.ldap.embedded.base-dn=dc=mcia,dc=com
+spring.ldap.embedded.port=8389
