--- a/build.gradle
+++ b/build.gradle
@@ -39,9 +39,15 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-actuator')
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 	implementation('org.springframework.boot:spring-boot-starter-web')
+	implementation('org.springframework.boot:spring-boot-starter-security')
+	implementation('org.springframework.ldap:spring-ldap-core')
+	implementation('org.springframework.security:spring-security-ldap')
+	compile("org.springframework:spring-tx")
+	compile("com.unboundid:unboundid-ldapsdk")
 	
 //	runtimeOnly('mysql:mysql-connector-java')
 	runtimeOnly('com.h2database:h2')
 	
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
+	testImplementation('org.springframework.security:spring-security-test')
 }
