--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,10 @@ server.port=8000
 logging.level.root=INFO
 logging.level.com.mcia = DEBUG
 
+# ldap configuration
+ldap.url = ldap://localhost:8389
+ldap.basedn = dc=mcia,dc=com
+
 #ldap Debugging
 spring.ldap.embedded.ldif=classpath:test-server.ldif
 spring.ldap.embedded.base-dn=dc=mcia,dc=com
